--- a/public/css/app.css
+++ b/public/css/app.css
@@ -413,61 +413,31 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-backdrop-sepia:  ;
 }
 
-.container {
-    width: 100%
-}
-@media (min-width: 640px) {
-    .container {
-        max-width: 640px
-    }
-}
-@media (min-width: 768px) {
-    .container {
-        max-width: 768px
-    }
-}
-@media (min-width: 1024px) {
-    .container {
-        max-width: 1024px
-    }
-}
-@media (min-width: 1280px) {
-    .container {
-        max-width: 1280px
-    }
-}
-@media (min-width: 1536px) {
-    .container {
-        max-width: 1536px
-    }
-}
 
-.relative {
-    position: relative
+
+.absolute {
+    position: absolute
 }
-.z-0 {
-    z-index: 0
+.right-0 {
+    right: 0px
 }
-.mx-auto {
-    margin-left: auto;
-    margin-right: auto
+.z-30 {
+    z-index: 30
 }
-.my-4 {
-    margin-top: 1rem;
-    margin-bottom: 1rem
+.mt-4 {
+    margin-top: 1rem
 }
-.my-3 {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem
+.mt-2 {
+    margin-top: 0.5rem
 }
-.mb-5 {
-    margin-bottom: 1.25rem
+.-ml-2 {
+    margin-left: -0.5rem
 }
-.ml-3 {
-    margin-left: 0.75rem
+.ml-7 {
+    margin-left: 1.75rem
 }
-.-ml-px {
-    margin-left: -1px
+.mr-6 {
+    margin-right: 1.5rem
 }
 .flex {
     display: flex
@@ -481,47 +451,107 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hidden {
     display: none
 }
-.h-5 {
-    height: 1.25rem
+.h-16 {
+    height: 4rem
+}
+.h-20 {
+    height: 5rem
+}
+.h-10 {
+    height: 2.5rem
+}
+.h-full {
+    height: 100%
+}
+.h-3 {
+    height: 0.75rem
+}
+.h-8 {
+    height: 2rem
+}
+.w-full {
+    width: 100%
+}
+.w-10 {
+    width: 2.5rem
+}
+.w-24 {
+    width: 6rem
+}
+.w-20 {
+    width: 5rem
+}
+.w-8 {
+    width: 2rem
 }
 .w-5 {
     width: 1.25rem
 }
-.flex-1 {
-    flex: 1 1 0%
+.w-6 {
+    width: 1.5rem
 }
-.transform {
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+.w-14 {
+    width: 3.5rem
 }
-.cursor-default {
-    cursor: default
+.w-16 {
+    width: 4rem
+}
+.w-12 {
+    width: 3rem
+}
+.cursor-pointer {
+    cursor: pointer
+}
+.items-start {
+    align-items: flex-start
 }
 .items-center {
     align-items: center
 }
+.justify-start {
+    justify-content: flex-start
+}
 .justify-between {
     justify-content: space-between
 }
-.justify-items-center {
-    justify-items: center
+.overflow-y-auto {
+    overflow-y: auto
+}
+.whitespace-nowrap {
+    white-space: nowrap
+}
+.rounded {
+    border-radius: 0.25rem
+}
+.rounded-full {
+    border-radius: 9999px
 }
 .rounded-md {
     border-radius: 0.375rem
 }
-.rounded-l-md {
-    border-top-left-radius: 0.375rem;
-    border-bottom-left-radius: 0.375rem
+.rounded-tl-lg {
+    border-top-left-radius: 0.5rem
 }
-.rounded-r-md {
-    border-top-right-radius: 0.375rem;
-    border-bottom-right-radius: 0.375rem
+.rounded-tr-lg {
+    border-top-right-radius: 0.5rem
 }
-.border {
-    border-width: 1px
+.border-b {
+    border-bottom-width: 1px
 }
-.border-gray-300 {
+.border-t {
+    border-top-width: 1px
+}
+.border-gray-100 {
     --tw-border-opacity: 1;
-    border-color: rgb(209 213 219 / var(--tw-border-opacity))
+    border-color: rgb(243 244 246 / var(--tw-border-opacity))
+}
+.bg-gray-100 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(243 244 246 / var(--tw-bg-opacity))
+}
+.bg-indigo-700 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(67 56 202 / var(--tw-bg-opacity))
 }
 .bg-white {
     --tw-bg-opacity: 1;
@@ -531,111 +561,210 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-left: 1rem;
     padding-right: 1rem
 }
-.py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem
+.py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem
 }
-.px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem
+.px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem
 }
-.text-center {
-    text-align: center
+.py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem
+}
+.px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem
+}
+.pt-4 {
+    padding-top: 1rem
+}
+.pb-5 {
+    padding-bottom: 1.25rem
+}
+.pl-4 {
+    padding-left: 1rem
+}
+.pl-12 {
+    padding-left: 3rem
+}
+.pl-20 {
+    padding-left: 5rem
+}
+.pl-16 {
+    padding-left: 4rem
+}
+.pt-2 {
+    padding-top: 0.5rem
+}
+.text-left {
+    text-align: left
+}
+.text-base {
+    font-size: 1rem;
+    line-height: 1.5rem
 }
 .text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem
 }
+.text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem
+}
+.font-bold {
+    font-weight: 700
+}
 .font-medium {
     font-weight: 500
 }
-.leading-5 {
-    line-height: 1.25rem
+.font-normal {
+    font-weight: 400
 }
-.text-gray-500 {
+.leading-normal {
+    line-height: 1.5
+}
+.leading-none {
+    line-height: 1
+}
+.leading-3 {
+    line-height: .75rem
+}
+.text-gray-800 {
     --tw-text-opacity: 1;
-    color: rgb(107 114 128 / var(--tw-text-opacity))
+    color: rgb(31 41 55 / var(--tw-text-opacity))
 }
-.text-gray-700 {
+.text-white {
     --tw-text-opacity: 1;
-    color: rgb(55 65 81 / var(--tw-text-opacity))
+    color: rgb(255 255 255 / var(--tw-text-opacity))
 }
-.shadow-sm {
-    --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-    --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+.text-gray-600 {
+    --tw-text-opacity: 1;
+    color: rgb(75 85 99 / var(--tw-text-opacity))
+}
+.antialiased {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale
+}
+.shadow {
+    --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
 }
-.outline {
-    outline-style: solid
+.shadow-md {
+    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
 }
-.ring-gray-300 {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity))
+.hover\:bg-indigo-600:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(79 70 229 / var(--tw-bg-opacity))
 }
-.transition {
-    transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
-    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 150ms
+.hover\:bg-gray-100:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(243 244 246 / var(--tw-bg-opacity))
 }
-.duration-150 {
-    transition-duration: 150ms
+.hover\:bg-indigo-700:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(67 56 202 / var(--tw-bg-opacity))
 }
-.ease-in-out {
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
-}
-.hover\:text-gray-500:hover {
+.hover\:text-white:hover {
     --tw-text-opacity: 1;
-    color: rgb(107 114 128 / var(--tw-text-opacity))
+    color: rgb(255 255 255 / var(--tw-text-opacity))
 }
-.hover\:text-gray-400:hover {
+.focus\:text-indigo-600:focus {
     --tw-text-opacity: 1;
-    color: rgb(156 163 175 / var(--tw-text-opacity))
-}
-.focus\:z-10:focus {
-    z-index: 10
-}
-.focus\:border-blue-300:focus {
-    --tw-border-opacity: 1;
-    border-color: rgb(147 197 253 / var(--tw-border-opacity))
+    color: rgb(79 70 229 / var(--tw-text-opacity))
 }
 .focus\:outline-none:focus {
     outline: 2px solid transparent;
     outline-offset: 2px
 }
-.focus\:ring:focus {
+.focus\:ring-2:focus {
     --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
 }
-.active\:bg-gray-100:active {
-    --tw-bg-opacity: 1;
-    background-color: rgb(243 244 246 / var(--tw-bg-opacity))
+.focus\:ring-indigo-600:focus {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(79 70 229 / var(--tw-ring-opacity))
 }
-.active\:text-gray-700:active {
-    --tw-text-opacity: 1;
-    color: rgb(55 65 81 / var(--tw-text-opacity))
+.focus\:ring-offset-2:focus {
+    --tw-ring-offset-width: 2px
 }
-.active\:text-gray-500:active {
-    --tw-text-opacity: 1;
-    color: rgb(107 114 128 / var(--tw-text-opacity))
+@media (prefers-color-scheme: dark) {
+    .dark\:border-gray-700 {
+        --tw-border-opacity: 1;
+        border-color: rgb(55 65 81 / var(--tw-border-opacity))
+    }
+    .dark\:bg-gray-700 {
+        --tw-bg-opacity: 1;
+        background-color: rgb(55 65 81 / var(--tw-bg-opacity))
+    }
+    .dark\:bg-gray-800 {
+        --tw-bg-opacity: 1;
+        background-color: rgb(31 41 55 / var(--tw-bg-opacity))
+    }
+    .dark\:text-white {
+        --tw-text-opacity: 1;
+        color: rgb(255 255 255 / var(--tw-text-opacity))
+    }
+    .dark\:text-gray-200 {
+        --tw-text-opacity: 1;
+        color: rgb(229 231 235 / var(--tw-text-opacity))
+    }
+    .dark\:hover\:bg-gray-900:hover {
+        --tw-bg-opacity: 1;
+        background-color: rgb(17 24 39 / var(--tw-bg-opacity))
+    }
 }
 @media (min-width: 640px) {
+    .sm\:ml-3 {
+        margin-left: 0.75rem
+    }
+    .sm\:mt-0 {
+        margin-top: 0px
+    }
     .sm\:flex {
         display: flex
     }
-    .sm\:hidden {
-        display: none
+    .sm\:px-6 {
+        padding-left: 1.5rem;
+        padding-right: 1.5rem
     }
-    .sm\:flex-1 {
-        flex: 1 1 0%
+    .sm\:text-lg {
+        font-size: 1.125rem;
+        line-height: 1.75rem
     }
-    .sm\:items-center {
-        align-items: center
+}
+@media (min-width: 768px) {
+    .md\:px-10 {
+        padding-left: 2.5rem;
+        padding-right: 2.5rem
     }
-    .sm\:justify-between {
-        justify-content: space-between
+    .md\:py-7 {
+        padding-top: 1.75rem;
+        padding-bottom: 1.75rem
+    }
+    .md\:pt-7 {
+        padding-top: 1.75rem
+    }
+    .md\:text-xl {
+        font-size: 1.25rem;
+        line-height: 1.75rem
+    }
+}
+@media (min-width: 1024px) {
+    .lg\:text-2xl {
+        font-size: 1.5rem;
+        line-height: 2rem
+    }
+}
+@media (min-width: 1536px) {
+    .\32xl\:px-0 {
+        padding-left: 0px;
+        padding-right: 0px
     }
 }
 
